--- a/index.html
+++ b/index.html
@@ -27,27 +27,48 @@
 
     <!-- About Section -->
     <section id="about" aria-labelledby="about-heading">
-      <h2 id="about-heading">About</h2>
-      <p>ส่วนแนะนำเกี่ยวกับเว็บไซต์หรือโปรเจ็กต์ — เขียนข้อความสั้น ๆ ที่นี่</p>
+      <h2 id="about-heading">About this Project</h2>
+      <p>โปรเจค Popepopepopopepo Game เป็นโปรเจคที่ใช้บอร์ด Arduino UNO R4 WiFi ในการต่อวงจรเกม LED Sequence
+        โดยการเล่นเกมนี้ คือ ผู้เล่นต้องกดลำดับของไฟที่กระพริบให้ถูกต้องตามลำดับ ภายในระยะเวลาที่โปรแกรมได้กำหนดไว้ หากแพ้ เกมจะรีเซตเริ่มต้นใหม่ที่ Level 1 ผู้เล่นจะชนะก็ต่อเมื่อผ่าน Level 13 ไปได้
+        และขึ้นแสดงข้อความเมื่อเล่นผ่านในแต่ละ Level นอกจากนี้ยังมีเสียงจากไฟที่กระพริบอีกด้วย
+        ผลลัพธ์เมื่อจบเกม จะแสดง Level และ Score Board สูงสุดใน 5 อันดับแรก 
+      </p>
     </section>
 
     <!-- Components Section -->
+     <br>
     <section id="components" aria-labelledby="components-heading">
       <h2 id="components-heading">Components</h2>
-      <p>รายการคอมโพเนนต์หรือโมดูลที่มีในโปรเจ็กต์</p>
       <div id="component-list">
         <article class="component" id="component-1">
-          <h3>Component A</h3>
-          <p>คำอธิบายสั้น ๆ ของ Component A</p>
+            <img src="image/image01.png" alt="">
+          <h3>Arduino Uno R4 WIFI </h3>
         </article>
         <article class="component" id="component-2">
-          <h3>Component B</h3>
-          <p>คำอธิบายสั้น ๆ ของ Component B</p>
+            <img src="image/image02.png" alt="">
+          <h3>Resistors</h3>
+        </article>
+        <article class="component" id="component-3">
+            <img src="image/image03.png" alt="">
+          <h3>Switchs</h3>
+        </article>
+        <article class="component" id="component-4">
+            <img src="image/image04.png" alt="">
+          <h3>Breadboard</h3>
+        </article>
+        <article class="component" id="component-5">
+            <img src="image/image05.png" alt="">
+          <h3>LED</h3>
+        </article>
+        <article class="component" id="component-6">
+            <img src="image/image06.png" alt="">
+          <h3>Passive Buzzer</h3>
         </article>
       </div>
     </section>
 
     <!-- Video Section -->
+     <br>
     <section id="video" aria-labelledby="video-heading">
       <h2 id="video-heading">Video</h2>
       <p>วิดีโอแสดงตัวอย่างหรือสาธิต</p>
@@ -57,9 +78,9 @@
     </section>
 
     <!-- Code Section -->
+     <br>
     <section id="code" aria-labelledby="code-heading">
-      <h2 id="code-heading">Code</h2>
-      <p>ตัวอย่างโค้ดหรือ snippet ที่ต้องการโชว์</p>
+      <h2 id="code-heading">Source Code</h2>
       <pre aria-label="Code example"><code>// ตัวอย่างโค้ด
 function hello() {
   console.log('Hello world');
@@ -68,6 +89,7 @@ function hello() {
     </section>
 
     <!-- Members Section -->
+     <br>
     <section id="members" aria-labelledby="members-heading">
       <h2 id="members-heading">Members</h2>
       <ul id="member-list">
