--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+
+
 <!doctype html>
 <html lang="th">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Popepopepopopepo Game</title>
-  <link rel="stylesheet" href="style.css">
   
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <!-- NAVBAR -->
@@ -28,9 +31,11 @@
   <main id="home" role="main">
 
     <!-- About Section -->
+     <br>
     <section id="about" aria-labelledby="about-heading">
       <h2 id="about-heading">About this Project</h2>
-      <p>โปรเจค Popepopepopopepo Game เป็นโปรเจคที่ใช้บอร์ด Arduino UNO R4 WiFi ในการต่อวงจรเกม LED Sequence
+      <img src="" alt="">
+      <p id="paragraph">โปรเจค Popepopepopopepo Game เป็นโปรเจคที่ใช้บอร์ด Arduino UNO R4 WiFi ในการต่อวงจรเกม LED Sequence
         โดยการเล่นเกมนี้ คือ ผู้เล่นต้องกดลำดับของไฟที่กระพริบให้ถูกต้องตามลำดับ ภายในระยะเวลาที่โปรแกรมได้กำหนดไว้ หากแพ้ เกมจะรีเซตเริ่มต้นใหม่ที่ Level 1 ผู้เล่นจะชนะก็ต่อเมื่อผ่าน Level 13 ไปได้
         และขึ้นแสดงข้อความเมื่อเล่นผ่านในแต่ละ Level นอกจากนี้ยังมีเสียงจากไฟที่กระพริบอีกด้วย
         ผลลัพธ์เมื่อจบเกม จะแสดง Level และ Score Board สูงสุดใน 5 อันดับแรก 
@@ -43,7 +48,7 @@
       <h2 id="components-heading">Components</h2>
       <div id="component-list">
         <article class="component" id="component-1">
-            <img src="image/image01.png" alt="">
+            <img src="image/image01.jpg" alt="">
           <h3>Arduino Uno R4 WIFI </h3>
         </article>
         <article class="component" id="component-2">
@@ -51,19 +56,19 @@
           <h3>Resistors</h3>
         </article>
         <article class="component" id="component-3">
-            <img src="image/image03.png" alt="">
+            <img src="image/image03.jpg" alt="">
           <h3>Switchs</h3>
         </article>
         <article class="component" id="component-4">
-            <img src="image/image04.png" alt="">
+            <img src="image/image04.jpg" alt="">
           <h3>Breadboard</h3>
         </article>
         <article class="component" id="component-5">
-            <img src="image/image05.png" alt="">
+            <img src="image/image05.webp" alt="">
           <h3>LED</h3>
         </article>
         <article class="component" id="component-6">
-            <img src="image/image06.png" alt="">
+            <img src="image/image06.webp" alt="">
           <h3>Passive Buzzer</h3>
         </article>
       </div>
@@ -73,7 +78,7 @@
      <br>
     <section id="video" aria-labelledby="video-heading">
       <h2 id="video-heading">Video</h2>
-      <p>วิดีโอแสดงตัวอย่างหรือสาธิต</p>
+      <br>
       <div class="video-wrapper">
         <iframe id="promo-video" title="Demo video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
       </div>
