--- a/index.html
+++ b/index.html
@@ -100,11 +100,24 @@ function hello() {
     <section id="members" aria-labelledby="members-heading">
       <h2 id="members-heading">Members</h2>
       <ul id="member-list">
-        <li class="member">นางสาวชยารัตน์ ฤทธิกุล รหัส 67070031</li>
-        <li class="member">นางสาวชลธิชา คนธภักดี รหัส 67070033</li>
-        <li class="member">นายญาณภัทร นิลสยาม รหัส 67070039</li>
-        <li class="member">นางสาวธัญญา ชนะถาวราลักษณ์ รหัส 67070075</li>
-      </ul>
+        <li class="member">
+            <span class="member-name">นางสาวชยารัตน์ ฤทธิกุล</span>
+            <span class="member-id">รหัส 67070031</span>
+        </li>
+        <li class="member">
+            <span class="member-name">นางสาวชลธิชา คนธภักดี</span>
+            <span class="member-id">รหัส 67070033</span>
+        </li>
+        <li class="member">
+            <span class="member-name">นายญาณภัทร นิลสยาม</span>
+            <span class="member-id">รหัส 67070039</span>
+        </li>
+        <li class="member">
+            <span class="member-name">นางสาวธัญญา ชนะถาวราลักษณ์</span>
+            <span class="member-id">รหัส 67070075</span>
+        </li>
+    </ul>
+
     </section>
 
   </main>
