--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <ul id="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#components">Components</a></li>
+        <li><a href="#input">Input</a></li>
+        <li><a href="#output">Output</a></li>
+        <li><a href="#process">Process</a></li>
         <li><a href="#video">Video</a></li>
         <li><a href="#code">Code</a></li>
         <li><a href="#members">Members</a></li>
@@ -102,7 +105,7 @@
 <!-- Process -->
 <section id="process" aria-labelledby="process-heading">
   <div class="process">
-    <h2 id="process-heading">Process (กระบวนการทำงาน)</h2>
+    <h2 id="process-heading">Process</h2>
           <p id="paragraph">
           1.เริ่มต้นระบบ: Arduino ทำการสุ่มลำดับของ LED ด้วย random() และระบบเริ่มจาก Level 1<br>
 2แสดงลำดับไฟ (Game Sequence): LED แต่ละดวงจะกระพริบตามลำดับที่ Arduino สุ่มไว้ และผู้เล่นต้องจำลำดับนี้ให้ได้<br>
