--- a/index.html
+++ b/index.html
@@ -128,16 +128,20 @@
       </div>
     </section>
 
-    <!-- Code Section -->
-     <br>
-    <section id="code" aria-labelledby="code-heading">
-      <h2 id="code-heading">Source Code</h2>
-      <pre aria-label="Code example"><code>// ตัวอย่างโค้ด
-function hello() {
-  console.log('Hello world');
-}
-</code></pre>
-    </section>
+<!-- Code Section -->
+<br>
+<section id="code" aria-labelledby="code-heading">
+  <h2 id="code-heading">Source Code</h2>
+
+  <a href="https://github.com/pineappleonthetree/PopepopepopopepoGame.git"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="code-button">
+    💻 PopepopepopopepoGame Code
+  </a>
+</section>
+
+
 
     <!-- Members Section -->
      <br>
