--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <ul id="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#components">Components</a></li>
-        <li><a href="#input">Input</a></li>
-        <li><a href="#output">Output</a></li>
+        <li><a href="#input">I/O</a></li>
         <li><a href="#process">Process</a></li>
         <li><a href="#video">Video</a></li>
         <li><a href="#code">Code</a></li>
@@ -138,6 +137,19 @@
      rel="noopener noreferrer"
      class="code-button">
     💻 PopepopepopopepoGame Code
+  </a>
+</section>
+
+<!-- Poster Section -->
+<br>
+<section id="poster" aria-labelledby="poster-heading">
+  <h2 id="poster-heading">Project Poster</h2>
+
+  <a href="https://drive.google.com/file/d/1Hy9IggyvmVZ_KEzUy5CPx7wbM_ArGMrG/view?usp=sharing"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="poster-button">
+    📜 PopepopepopopepoGame Poster
   </a>
 </section>
 
