--- a/index.html
+++ b/index.html
@@ -29,19 +29,27 @@
 
   <!-- MAIN CONTENT -->
   <main id="home" role="main">
+    <section id="start">
+      <div>
+        <h2 id="arduino-heading">Arduino</h2>
+        <p>Physical Computing Project 2025</p>
+        <br>
+        <p id="scroll">scroll down to read</p>
+        <img src="image/cat.JPG" alt="">
+      </div>
+    </section>
 
     <!-- About Section -->
-     <br>
-      <section id="about" aria-labelledby="about-heading">
-        <img src="image/image07.jpg" alt="">
+      <section id="about">
+        <img src="image/cover-about.jpg" alt="">
         <div class="about-text">
           <h2 id="about-heading">About this Project</h2>
           <br>
           <p id="paragraph">
-            โปรเจค Popepopepopopepo Game เป็นโปรเจคที่ใช้บอร์ด Arduino UNO R4 WiFi ในการต่อวงจรเกม LED Sequence
-            โดยการเล่นเกมนี้ คือ ผู้เล่นต้องกดลำดับของไฟที่กระพริบให้ถูกต้องตามลำดับ ภายในระยะเวลาที่โปรแกรมได้กำหนดไว้ หากแพ้ เกมจะรีเซตเริ่มต้นใหม่ที่ Level 1 ผู้เล่นจะชนะก็ต่อเมื่อผ่าน Level 13 ไปได้
-            และขึ้นแสดงข้อความเมื่อเล่นผ่านในแต่ละ Level นอกจากนี้ยังมีเสียงจากไฟที่กระพริบอีกด้วย
-            ผลลัพธ์เมื่อจบเกม จะแสดง Level และ Score Board สูงสุดใน 5 อันดับแรก 
+            โปรเจค Popepopepopopepo Game เป็นโปรเจคที่ใช้บอร์ด Arduino UNO R4 WiFi ในการต่อวงจรเกม LED Sequence โดยการเล่นเกมนี้ คือ 
+            ผู้เล่นต้องกดไฟที่กระพริบตามลำดับให้ถูกต้อง ภายในระยะเวลาที่โปรแกรมกำหนดไว้ หากแพ้ เกมจะรีเซตเริ่มต้นใหม่ที่ Level 1 ซึ่งเกมนี้สามารถเล่นได้เรื่อย ๆ 
+            จำนวนครั้งที่ต้องกดปุ่ม แปรผันตามจำนวน Level ที่เพิ่มขึ้น แสดงผลลัพธ์ของการเล่นเกมบน Web browser ได้แก่ 
+            1. Level ที่ผ่านล่าสุด (อัปเดตเรื่อย ๆ ขณะเล่นเกม) 2. Score Broad 5 อันดับสูงสุด และเมื่อกดปุ่ม "Reset Scores" คือ การรีเซต Score Broad นอกจากนี้ยังมีเสียงไฟกระพริบที่เป็นเสียงโน้ตดนตรีอีกด้วย 
           </p>
         </div>
       </section>
